--- a/k8s/笔记/yaml/recommended.yaml
+++ b/k8s/笔记/yaml/recommended.yaml
@@ -37,9 +37,11 @@ metadata:
   name: kubernetes-dashboard
   namespace: kubernetes-dashboard
 spec:
+  type: NodePort
   ports:
     - port: 443
       targetPort: 8443
+      nodePort: 30000
   selector:
     k8s-app: kubernetes-dashboard
 
@@ -191,7 +193,7 @@ spec:
       containers:
         - name: kubernetes-dashboard
           image: kubernetesui/dashboard:v2.6.0
-          imagePullPolicy: IfNotPresent
+          imagePullPolicy: Always
           ports:
             - containerPort: 8443
               protocol: TCP
@@ -244,11 +246,9 @@ metadata:
   name: dashboard-metrics-scraper
   namespace: kubernetes-dashboard
 spec:
-  type: NodePort
   ports:
     - port: 8000
       targetPort: 8000
-      nodePort:30009
   selector:
     k8s-app: dashboard-metrics-scraper
 
