--- a/k8s/笔记/yaml/deploy.yaml
+++ b/k8s/笔记/yaml/deploy.yaml
@@ -435,7 +435,7 @@ spec:
               fieldPath: metadata.namespace
         - name: LD_PRELOAD
           value: /usr/local/lib/libmimalloc.so
-        image: registry.u.aliyuncs.com/google_containers/controller:v1.3.0@sha256:d1707ca76d3b044ab8a28277a2466a02100ee9f58a86af1535a3edf9323ea1b5
+        image: registry.aliyuncs.com/google_containers/ingress-nginx-controller:v1.3.0@sha256:d1707ca76d3b044ab8a28277a2466a02100ee9f58a86af1535a3edf9323ea1b5
         imagePullPolicy: IfNotPresent
         lifecycle:
           preStop:
@@ -532,7 +532,7 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.namespace
-        image: registry.u.aliyuncs.com/google_containers/kube-webhook-certgen:v1.3.0
+        image: registry.aliyuncs.com/google_containers/kube-webhook-certgen:v1.3.0
         imagePullPolicy: IfNotPresent
         name: create
         securityContext:
@@ -581,7 +581,7 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.namespace
-        image: registry.u.aliyuncs.com/google_containers/kube-webhook-certgen:v1.3.0
+        image: registry.aliyuncs.com/google_containers/kube-webhook-certgen:v1.3.0
         imagePullPolicy: IfNotPresent
         name: patch
         securityContext:
